--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 		<dependency>
 			<groupId>com.github.ben-manes.caffeine</groupId>
 			<artifactId>caffeine</artifactId>
-			<version>3.1.0</version> <!-- Utiliza la última versión disponible -->
+			<version>3.1.0</version>
 		</dependency>
 
 		<dependency>
@@ -86,6 +86,19 @@
 			<artifactId>spring-boot-starter-cache</artifactId>
 			<version>2.2.4.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.woden</groupId>
+			<artifactId>woden-impl-commons</artifactId>
+			<version>1.0M9</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!--<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-docker-compose</artifactId>
+            <optional>true</optional>
+        </dependency>-->
 
 
 	</dependencies>
